added .svg files, completed initial html/css.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Library</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="main.js"></script>
+    <div class="wrapper">
+    </div>
+    <!-- ---|| HEADER ||--- -->
+    <header>
+        <div class="header-svg-container1">
+            <img src="./assets/bookshelf.svg" class="bookshelf-svg" alt="Books">
+        </div>
+        <h1>Giles Davis' Sci-Fi Library</h1>
+        <div class="header-svg-container2">
+            <img src="./assets/bookshelf.svg" class="bookshelf-svg" alt="Books">
+        </div>
+        <button id="addBook">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <title>plus-circle</title>
+                <path d="M17,13H13V17H11V13H7V11H11V7H13V11H17M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
+            </svg>
+        </button>
+    </header>
+
+    <!-- ---|| CONTENT ||--- -->
+    <main>            
+        <script src="main.js"></script>
+    </main>
+
+    <!-- ---|| FOOTER ||--- -->
+    <footer>
+        <p class="footer-text">Copyright &copy; <a href="https://github.com/giles-davis">Giles Davis Productions</a> 2024</p>
+    </footer>
 </body>
 </html>
