--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
     <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
 </head>
 <body>
     <div class="wrapper">
@@ -14,11 +15,11 @@
         <div class="header-svg-container1">
             <img src="./assets/bookshelf.svg" class="bookshelf-svg" alt="Books">
         </div>
-        <h1>Giles Davis' Sci-Fi Library</h1>
+        <h1>Giles Davis' 2025 Library</h1>
         <div class="header-svg-container2">
             <img src="./assets/bookshelf.svg" class="bookshelf-svg" alt="Books">
         </div>
-        <button id="addBook">
+        <button id="addBookBtn">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                 <title>plus-circle</title>
                 <path d="M17,13H13V17H11V13H7V11H11V7H13V11H17M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
@@ -27,8 +28,58 @@
     </header>
 
     <!-- ---|| CONTENT ||--- -->
-    <main>            
-        <script src="main.js"></script>
+    <main>
+        <div class="shelf-container">
+            <div class="bookshelf" id="tbr">
+                TBR
+            </div>
+            <div class="bookshelf" id="read">
+                Read
+            </div>
+            <dialog id="addBookDialog">
+                <form action="" method="post" id="bookAdd">
+                  <div class="popup">
+                    <div class="field">
+                      <label for="title">Title</label>
+                      <input type="text" name="title" id="title" required />
+                    </div>
+                    <div class="field">
+                      <label for="author">Author</label>
+                      <input type="text" name="author" id="author" required />
+                    </div>
+                    <div class="field">
+                      <label for="pages">Page count</label>
+                      <input type="tel" name="pages" id="pages" required />
+                    </div>
+                    <div class="switch">
+                      <label for="read">Shelf</label>
+                      <input type="checkbox" name="read" id="read" role="switch" />
+                    </div>
+                    <div class="field btns">
+                      <button type="submit" id="confirmBtn">Add a book</button>
+                      <button type="reset" id="reset">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z" /></svg>
+                      </button>
+                      <button value="cancel" id="close" formmethod="dialog">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20 6.91L17.09 4L12 9.09L6.91 4L4 6.91L9.09 12L4 17.09L6.91 20L12 14.91L17.09 20L20 17.09L14.91 12L20 6.91Z" /></svg>
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </dialog>        
+            <!-- <div class="bookshelf" id="january">January</div>
+            <div class="bookshelf" id="february">February</div>
+            <div class="bookshelf" id="march">March</div>
+            <div class="bookshelf" id="april">April</div>
+            <div class="bookshelf" id="may">May</div>
+            <div class="bookshelf" id="june">June</div>
+            <div class="bookshelf" id="july">July</div>
+            <div class="bookshelf" id="august">August</div>
+            <div class="bookshelf" id="september">September</div>
+            <div class="bookshelf" id="october">October</div>
+            <div class="bookshelf" id="november">November</div>
+            <div class="bookshelf" id="december">December</div> -->
+        </div> 
     </main>
 
     <!-- ---|| FOOTER ||--- -->
