--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library</title>
+    <title>Sci-Fi 2025</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
 </head>
 <body>
     <div class="wrapper">
@@ -15,7 +18,7 @@
         <div class="header-svg-container1">
             <img src="./assets/bookshelf.svg" class="bookshelf-svg" alt="Books">
         </div>
-        <h1>Giles Davis' 2025 Library</h1>
+        <h1>Giles Davis' 2025 Sci-Fi</h1>
         <div class="header-svg-container2">
             <img src="./assets/bookshelf.svg" class="bookshelf-svg" alt="Books">
         </div>
@@ -39,24 +42,66 @@
             <dialog id="addBookDialog">
                 <form action="" method="post" id="bookAdd">
                   <div class="popup">
-                    <div class="field">
-                      <label for="title">Title</label>
-                      <input type="text" name="title" id="title" required />
-                    </div>
-                    <div class="field">
-                      <label for="author">Author</label>
-                      <input type="text" name="author" id="author" required />
-                    </div>
-                    <div class="field">
-                      <label for="pages">Page count</label>
-                      <input type="tel" name="pages" id="pages" required />
-                    </div>
-                    <div class="switch">
-                      <label for="read">Shelf</label>
-                      <input type="checkbox" name="read" id="read" role="switch" />
-                    </div>
+                        <div class="field">
+                            <label for="title">Title</label>
+                            <input 
+                                type="text" 
+                                name="title" 
+                                id="title" 
+                                required 
+                                minlength="1" 
+                                maxlength="30"/>
+                        </div>
+                        <div class="field">
+                            <label for="author">Author</label>
+                            <input 
+                                type="text" 
+                                name="author" 
+                                id="author" 
+                                required 
+                                minlength="1" 
+                                maxlength="30" />
+                        </div>
+                        <div class="field">
+                            <label for="pages">Page count</label>
+                            <input 
+                                type="number" 
+                                name="pages" 
+                                id="pages" 
+                                required 
+                                min="1"/>
+                        </div>
+                        <fieldset>
+                            <legend>Shelf</legend>
+                            <div class="radio" required>
+                                <label for="tbr">TBR</label>
+                                <input 
+                                    type="radio" 
+                                    id="tbr" 
+                                    name="shelf" 
+                                    value="tbr" 
+                                    checked>
+                            </div>
+                            <div class="radio" required>
+                                <label for="read">Read</label>
+                                <input 
+                                    type="radio" 
+                                    id="read" 
+                                    name="shelf" 
+                                    value="read">
+                            </div>
+                        </fieldset>
+                        <div class="field">
+                            <label for="date">Date Read (optional)</label>
+                            <input 
+                                type="text" 
+                                name="date" 
+                                id="date" 
+                                pattern="(Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec)-\d{4}"
+                                placeholder="Jan-YYYY" />
+                        </div>
                     <div class="field btns">
-                      <button type="submit" id="confirmBtn">Add a book</button>
+                      <button type="submit" id="confirmBtn">Add book</button>
                       <button type="reset" id="reset">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z" /></svg>
                       </button>
