--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sci-Fi 2025</title>
+    <title>Book Tracker</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
         <div class="header-svg-container1">
             <img src="./assets/bookshelf.svg" class="bookshelf-svg" alt="Books">
         </div>
-        <h1>Giles Davis' Monthly Book Tracker</h1>
+        <h1>Giles Davis' Book Tracker</h1>
         <div class="header-svg-container2">
             <img src="./assets/bookshelf.svg" class="bookshelf-svg" alt="Books">
         </div>
